--- a/arch/ibmpc/Makefile
+++ b/arch/ibmpc/Makefile
@@ -1,4 +1,7 @@
 
-OBJ-y += arch/current/arch_init.o
-OBJ-y += arch/current/mem_alloc.o
+ARCH=ibmpc
+ARCHCFLAGS=
+
+OBJ-y += arch/ibmpc/arch_init.o
+OBJ-y += arch/ibmpc/mem_alloc.o
 
