--- a/cpu/x86/Makefile
+++ b/cpu/x86/Makefile
@@ -1,4 +1,8 @@
 
+CPU=x86
+CPUCFLAGS=-mno-tls-direct-seg-refs
+CPUTOOLS=
+
 OBJ-y += cpu/x86/interrupts.o
 OBJ-y += cpu/x86/boot.o
 OBJ-y += cpu/x86/cpu_init.o
