--- a/hexo/Makefile
+++ b/hexo/Makefile
@@ -1,6 +1,6 @@
 
-OBJ-y += main/main.o
-OBJ-y += main/task.o
-OBJ-y += main/device.o
-OBJ-y += main/mutek_logo_320x200.o
+OBJ-y += hexo/main.o
+OBJ-y += hexo/task.o
+OBJ-y += hexo/device.o
+OBJ-y += hexo/mutek_logo_320x200.o
 
