--- a/cpu/x86/Makefile
+++ b/cpu/x86/Makefile
@@ -6,7 +6,7 @@ CPUTOOLS=
 OBJ-y += cpu/x86/interrupts.o
 OBJ-y += cpu/x86/boot.o
 OBJ-y += cpu/x86/cpu_init.o
-OBJ-y += cpu/x86/cpu_task.o
+OBJ-y += cpu/x86/cpu_context.o
 
 include  cpu/x86/libc/Makefile
 
