--- a/cpu/mips/Makefile
+++ b/cpu/mips/Makefile
@@ -6,7 +6,7 @@ CPUTOOLS=mipsel-unknown-elf-
 OBJ-y += cpu/mips/interrupts.o
 OBJ-y += cpu/mips/boot.o
 OBJ-y += cpu/mips/cpu_init.o
-OBJ-y += cpu/mips/cpu_task.o
+OBJ-y += cpu/mips/cpu_context.o
 
 #include  cpu/mips/libc/Makefile
 
