--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -6,6 +6,7 @@ ifeq ($(ARCH), ibmpc)
   include drivers/tty-vga/Makefile
   include drivers/uart-8250/Makefile
   include drivers/enum-pci/Makefile
+  include drivers/net-ns8390/Makefile
 endif
 
 ifeq ($(ARCH), soclib)
