--- a/hexo/Makefile
+++ b/hexo/Makefile
@@ -1,6 +1,7 @@
 
 OBJ-y += hexo/main.o
 OBJ-y += hexo/context.o
+OBJ-y += hexo/scheduler.o
 OBJ-y += hexo/device.o
 OBJ-y += hexo/mutek_logo_320x200.o
 
