* changed the protocol registration mecanism

--- a/libnetwork/Makefile
+++ b/libnetwork/Makefile
@@ -1,6 +1,6 @@
 
 OBJ-y += libnetwork/protocols/dummy.o
-OBJ-y += libnetwork/protocols/arp.o
+#OBJ-y += libnetwork/protocols/arp.o
 OBJ-y += libnetwork/protocols/rarp.o
 #OBJ-y += libnetwork/protocols/ip.o
 #OBJ-y += libnetwork/protocols/icmp.o
