packets are now objects with ref counts

--- a/libnetwork/Makefile
+++ b/libnetwork/Makefile
@@ -1,4 +1,5 @@
 
+OBJ-y += libnetwork/packet.o
 OBJ-y += libnetwork/protocols/dummy.o
 #OBJ-y += libnetwork/protocols/arp.o
 OBJ-y += libnetwork/protocols/rarp.o
