--- a/libnetwork/Makefile
+++ b/libnetwork/Makefile
@@ -4,7 +4,7 @@ OBJ-y += libnetwork/protocols/dummy.o
 OBJ-y += libnetwork/protocols/arp.o
 OBJ-y += libnetwork/protocols/rarp.o
 OBJ-y += libnetwork/protocols/ip.o
-#OBJ-y += libnetwork/protocols/icmp.o
+OBJ-y += libnetwork/protocols/icmp.o
 #OBJ-y += libnetwork/protocols/udp.o
 
 
