--- a/libnetwork/Makefile
+++ b/libnetwork/Makefile
@@ -5,6 +5,6 @@ OBJ-y += libnetwork/protocols/arp.o
 OBJ-y += libnetwork/protocols/rarp.o
 OBJ-y += libnetwork/protocols/ipv4.o
 OBJ-y += libnetwork/protocols/icmpv4.o
-#OBJ-y += libnetwork/protocols/udp.o
+OBJ-y += libnetwork/protocols/udp.o
 
 
