New build system, with deps

--- a/arch/soclib/Makefile
+++ b/arch/soclib/Makefile
@@ -1,7 +1,5 @@
 
-ARCH=soclib
-ARCHCFLAGS=
-
-OBJ-y += arch/soclib/arch_init.o
-OBJ-y += arch/soclib/mem_alloc.o
+objs = 											\
+arch_init.o										\
+mem_alloc.o
 
