--- a/drivers/tty-vga/Makefile
+++ b/drivers/tty-vga/Makefile
@@ -1,5 +1,5 @@
-
-OBJ-y += drivers/tty-vga/tty-vga.o
-OBJ-y += drivers/tty-vga/tty-vga-ansi.o
-OBJ-y += drivers/tty-vga/tty-vga-i8042.o
+objs = 											\
+tty-vga.o										\
+tty-vga-ansi.o									\
+tty-vga-i8042.o
 
