--- a/libnetwork/Makefile
+++ b/libnetwork/Makefile
@@ -1,11 +1,5 @@
 
-OBJ-y += libnetwork/packet.o
-OBJ-y += libnetwork/if.o
-OBJ-y += libnetwork/protocols/dummy.o
-OBJ-y += libnetwork/protocols/arp.o
-OBJ-y += libnetwork/protocols/rarp.o
-OBJ-y += libnetwork/protocols/ipv4.o
-OBJ-y += libnetwork/protocols/icmpv4.o
-OBJ-y += libnetwork/protocols/udp.o
+objs += packet.o
+objs += if.o
 
-
+subdirs = protocols
