--- a/libpthread/Makefile
+++ b/libpthread/Makefile
@@ -1,7 +1,5 @@
 
-OBJ-y += libpthread/thread.o
-OBJ-y += libpthread/mutex.o
-OBJ-y += libpthread/cond.o
-OBJ-y += libpthread/rwlock.o
-
-
+objs += thread.o
+objs += mutex.o
+objs += cond.o
+objs += rwlock.o
