--- a/arch/ibmpc/Makefile
+++ b/arch/ibmpc/Makefile
@@ -1,7 +1,5 @@
 
-ARCH=ibmpc
-ARCHCFLAGS=
-
-OBJ-y += arch/ibmpc/arch_init.o
-OBJ-y += arch/ibmpc/mem_alloc.o
+objs =											\
+arch_init.o										\
+mem_alloc.o
 
