--- a/cpu/mips/Makefile
+++ b/cpu/mips/Makefile
@@ -1,12 +1,7 @@
 
-CPU=mips
-CPUCFLAGS=
-CPUTOOLS=mipsel-unknown-elf-
-
-OBJ-y += cpu/mips/interrupts.o
-OBJ-y += cpu/mips/boot.o
-OBJ-y += cpu/mips/cpu_init.o
-OBJ-y += cpu/mips/cpu_context.o
-
-#include  cpu/mips/libc/Makefile
+objs = 											\
+interrupts.o									\
+boot.o											\
+cpu_init.o										\
+cpu_context.o
 
