--- a/hexo/Makefile
+++ b/hexo/Makefile
@@ -3,5 +3,6 @@ objs =											\
 main.o											\
 context.o										\
 scheduler.o										\
+mem_alloc.o										\
 device.o										\
 mutek_logo_320x200.o
