--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -1,18 +1,19 @@
 
 ifeq ($(ARCH), ibmpc)
-subdirs = 										\
+subdirs = 								\
  fb-vga									\
  icu-8259								\
  timer-8253								\
  tty-vga								\
  uart-8250								\
  enum-pci								\
+ enum-isapnp								\
  net-ne2000								\
  net-3c900
 endif
 
 ifeq ($(ARCH), soclib)
-subdirs = 										\
+subdirs = 								\
  tty-soclib								\
  icu-soclib								\
  timer-soclib
