--- a/libnetwork/protocols/Makefile
+++ b/libnetwork/protocols/Makefile
@@ -1,5 +1,6 @@
-objs = arp.o											\
+objs = arp.o										\
 rarp.o											\
 ipv4.o											\
 icmpv4.o										\
-udp.o
+udp.o											\
+tcp.o
