la ca va tout peter

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -1,22 +1,49 @@
 
-ifeq ($(ARCH), ibmpc)
-subdirs = 								\
- fb-vga									\
- icu-8259								\
- timer-8253								\
- tty-vga								\
- uart-8250								\
- enum-pci								\
- enum-isapnp								\
- net-ne2000								\
- net-3c900
+ifeq ($(CONFIG_DRIVER_NET_NE2000), defined)
+ subdirs += net-ne2000
 endif
 
-ifeq ($(ARCH), soclib)
-subdirs = 								\
- tty-soclib								\
- icu-soclib								\
- timer-soclib
+ifeq ($(CONFIG_DRIVER_CHAR_SOCLIBTTY), defined)
+ subdirs += tty-soclib
 endif
 
+ifeq ($(CONFIG_DRIVER_CHAR_VGATTY), defined)
+ subdirs += tty-vga
+endif
+
+ifeq ($(CONFIG_DRIVER_CHAR_UART8250), defined)
+ subdirs += uart-8250
+endif
+
+ifeq ($(CONFIG_DRIVER_TIMER_8253), defined)
+ subdirs += timer-8253
+endif
+
+ifeq ($(CONFIG_DRIVER_NET_3C900), defined)
+ subdirs += net-3c900
+endif
+
+ifeq ($(CONFIG_DRIVER_ENUM_PCI), defined)
+ subdirs += enum-pci
+endif
+
+ifeq ($(CONFIG_DRIVER_ENUM_ISAPNP), defined)
+ subdirs += enum-isapnp
+endif
+
+ifeq ($(CONFIG_DRIVER_FB_VGA), defined)
+ subdirs += fb-vga
+endif
+
+ifeq ($(CONFIG_DRIVER_ICU_8259), defined)
+ subdirs += icu-8259
+endif
+
+ifeq ($(CONFIG_DRIVER_ICU_SOCLIB), defined)
+ subdirs += icu-soclib
+endif
+
+ifeq ($(CONFIG_DRIVER_TIMER_SOCLIB), defined)
+ subdirs += timer-soclib
+endif
 
