--- a/hexo/Makefile
+++ b/hexo/Makefile
@@ -4,5 +4,9 @@ main.o											\
 context.o										\
 scheduler.o										\
 mem_alloc.o										\
-device.o										\
-mutek_logo_320x200.o
+device.o
+
+ifeq ($(CONFIG_FEATURE_LOGO), defined)
+ objs += mutek_logo_320x200.o
+endif
+
