--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -2,7 +2,7 @@
 %config CONFIG_NETWORK
 desc Enable network support
 default defined
-depend CONFIG_FEATURE_TIMERMS
+depend CONFIG_MUTEK_TIMERMS
 %config end
 
 %config CONFIG_NETWORK_AUTOALIGN
