--- a/drivers/drivers.config
+++ b/drivers/drivers.config
@@ -1,37 +1,25 @@
 
 %config CONFIG_DRIVER_TTY
-depend CONFIG_DRIVER_CHAR_SOCLIBTTY CONFIG_DRIVER_CHAR_VGATTY
-default defined
-flags nowarn
+desc At least one tty device driver must be enable to have it defined
 %config end
 
 %config CONFIG_DRIVER_UART
-depend CONFIG_DRIVER_CHAR_UART8250
-default defined
-flags nowarn
+desc At least one uart device driver must be enable to have it defined
 %config end
 
 %config CONFIG_DRIVER_NET
-depend CONFIG_DRIVER_NET_NE2000 CONFIG_DRIVER_NET_3C900
-default defined
-flags nowarn
+desc At least one network device driver must be enable to have it defined
 %config end
 
 %config CONFIG_DRIVER_TIMER
-depend CONFIG_DRIVER_TIMER_8253 CONFIG_DRIVER_TIMER_8253
-default defined
-flags nowarn
+desc At least one timer device driver must be enable to have it defined
 %config end
 
 %config CONFIG_DRIVER_ICU
-depend CONFIG_DRIVER_ICU_8259 CONFIG_DRIVER_ICU_SOCLIB
-default defined
-flags nowarn
+desc At least one interrupt control device driver must be enable to have it defined
 %config end
 
 %config CONFIG_DRIVER_FB
-depend CONFIG_DRIVER_FB_VGA
-default defined
-flags nowarn
+desc At least one frame buffer device driver must be enable to have it defined
 %config end
 
