--- a/drivers/fb-vga/fb-vga.config
+++ b/drivers/fb-vga/fb-vga.config
@@ -4,5 +4,6 @@ desc enable vga frame buffer device support
 default undefined
 depend CONFIG_ARCH_IBMPC
 exclude CONFIG_DRIVER_CHAR_VGATTY
+provide CONFIG_DRIVER_FB
 %config end
 
