--- a/drivers/icu-8259/icu-8259.config
+++ b/drivers/icu-8259/icu-8259.config
@@ -3,5 +3,6 @@
 desc enable intel 8259 interrupt controller support
 default undefined
 depend CONFIG_ARCH_IBMPC
+provide CONFIG_DRIVER_ICU
 %config end
 
