--- a/drivers/tty-soclib/tty-soclib.config
+++ b/drivers/tty-soclib/tty-soclib.config
@@ -3,5 +3,7 @@
 desc enable soclib TTY device support
 default undefined
 depend CONFIG_ARCH_SOCLIB
+depend CONFIG_DRIVER_ICU
+provide CONFIG_DRIVER_TTY
 %config end
 
