--- a/drivers/uart-8250/uart-8250.config
+++ b/drivers/uart-8250/uart-8250.config
@@ -3,5 +3,7 @@
 desc enable intel 8250 uart device support
 default undefined
 depend CONFIG_ARCH_IBMPC
+depend CONFIG_DRIVER_ICU
+provide CONFIG_DRIVER_UART
 %config end
 
