--- a/drivers/icu-soclib/icu-soclib.config
+++ b/drivers/icu-soclib/icu-soclib.config
@@ -3,5 +3,6 @@
 desc enable SocLib interrupt controller unit support
 default undefined
 depend CONFIG_ARCH_SOCLIB
+provide CONFIG_DRIVER_ICU
 %config end
 
