--- a/drivers/net-3c900/net-3c900.config
+++ b/drivers/net-3c900/net-3c900.config
@@ -4,5 +4,7 @@ desc enable 3com 9xx network device support
 default undefined
 depend CONFIG_ARCH_IBMPC
 depend CONFIG_NETWORK
+depend CONFIG_DRIVER_ICU
+provide CONFIG_DRIVER_NET
 %config end
 
