--- a/drivers/net-ne2000/net-ne2000.config
+++ b/drivers/net-ne2000/net-ne2000.config
@@ -4,5 +4,7 @@ desc enable NE2000 network device support
 default undefined
 depend CONFIG_NETWORK
 depend CONFIG_ARCH_IBMPC
+depend CONFIG_DRIVER_ICU
+provide CONFIG_DRIVER_NET
 %config end
 
