--- a/drivers/timer-8253/timer-8253.config
+++ b/drivers/timer-8253/timer-8253.config
@@ -3,5 +3,7 @@
 desc enable intel 8253 timer device support
 default undefined
 depend CONFIG_ARCH_IBMPC
+depend CONFIG_DRIVER_ICU
+provide CONFIG_DRIVER_TIMER
 %config end
 
