--- a/drivers/timer-soclib/timer-soclib.config
+++ b/drivers/timer-soclib/timer-soclib.config
@@ -3,5 +3,7 @@
 desc enable SocLib timer device support
 default undefined
 depend CONFIG_ARCH_SOCLIB
+depend CONFIG_DRIVER_ICU
+provide CONFIG_DRIVER_TIMER
 %config end
 
