--- a/drivers/tty-vga/tty-vga.config
+++ b/drivers/tty-vga/tty-vga.config
@@ -3,6 +3,8 @@
 desc enable vga TTY device support
 default undefined
 depend CONFIG_ARCH_IBMPC
+depend CONFIG_DRIVER_ICU
+provide CONFIG_DRIVER_TTY
 %config end
 
 %config CONFIG_DRIVER_CHAR_VGATTY_ANSI
