si tu lis ca depuis l Italie, alors tu es un g33k complet

--- a/libnetwork/Makefile
+++ b/libnetwork/Makefile
@@ -1,8 +1,29 @@
 
 objs += packet.o
 objs += if.o
-objs += route.o
 
-objs += test_server.o
+ifeq ($(CONFIG_NETWORK_ROUTING), defined)
+ objs += route.o
+endif
 
-subdirs = protocols libudp libtcp libsocket lwnfs
+ifeq ($(CONFIG_NETWORK_FILTER), defined)
+ objs += filter.o
+endif
+
+subdirs = protocols
+
+ifeq ($(CONFIG_NETWORK_UDP), defined)
+ subdirs += libudp
+endif
+
+ifeq ($(CONFIG_NETWORK_TCP), defined)
+ subdirs += libtcp
+endif
+
+ifeq ($(CONFIG_NETWORK_SOCKET), defined)
+ subdirs += libsocket
+endif
+
+ifeq ($(CONFIG_NETWORK_NFS), defined)
+ subdirs += lwnfs
+endif
