--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -7,6 +7,61 @@ depend CONFIG_MUTEK_TIMERMS
 
 %config CONFIG_NETWORK_AUTOALIGN
 desc Force packet buffer alignment
+default undefined
+%config end
+
+%config CONFIG_NETWORK_PROFILING
+desc Provide profiling information about network layer
+default undefined
+%config end
+
+%config CONFIG_NETWORK_IPV4
+desc Enable IP version 4 support
 default defined
 %config end
 
+%config CONFIG_NETWORK_ROUTING
+desc Enable packet routing support
+default undefined
+%config end
+
+%config CONFIG_NETWORK_FILTER
+desc Enable packet filtering support
+default undefined
+%config end
+
+%config CONFIG_NETWORK_RARP
+desc Enable RARP builtin client for address attribution
+default undefined
+require CONFIG_NETWORK_IPV4
+%config end
+
+%config CONFIG_NETWORK_UDP
+desc Enable UDP transport support
+default defined
+require CONFIG_NETWORK_IPV4
+%config end
+
+%config CONFIG_NETWORK_TCP
+desc Enable TCP transport support
+default defined
+require CONFIG_NETWORK_IPV4
+%config end
+
+%config CONFIG_NETWORK_NFS
+desc Enable NFS builtin client for network filesystem
+default undefined
+require CONFIG_NETWORK_UDP
+%config end
+
+%config CONFIG_NETWORK_SOCKET
+desc Enable libsocket API support
+default defined
+require CONFIG_NETWORK_UDP CONFIG_NETWORK_TCP
+%config end
+
+%config CONFIG_NETWORK_SOCKET_ADVANCED
+desc Enable libsocket API support for advanced functions
+default defined
+require CONFIG_NETWORK_SOCKET
+%config end
