--- a/libnetwork/protocols/Makefile
+++ b/libnetwork/protocols/Makefile
@@ -1,6 +1,17 @@
-objs = arp.o										\
-rarp.o											\
-ipv4.o											\
-icmpv4.o										\
-udp.o											\
-tcp.o
+objs =
+
+ifeq ($(CONFIG_NETWORK_IPV4), defined)
+ objs += arp.o ipv4.o icmpv4.o
+endif
+
+ifeq ($(CONFIG_NETWORK_RARP), defined)
+ objs += rarp.o
+endif
+
+ifeq ($(CONFIG_NETWORK_UDP), defined)
+ objs += udp.o
+endif
+
+ifeq ($(CONFIG_NETWORK_TCP), defined)
+ objs += tcp.o
+endif
