vivement les vacances

--- a/arch/arch.config
+++ b/arch/arch.config
@@ -42,6 +42,7 @@ require	CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB
 # Makefile variable
 
 %config CONFIG_ARCH_NAME
+desc	makefile variable configuration token
 flags	noheader
 %config end
 
