--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -80,6 +80,7 @@ require	CONFIG_CPU_X86 CONFIG_CPU_MIPS
 # Makefile variable
 
 %config CONFIG_CPU_NAME
+desc	makefile variable configuration token
 flags	noheader
 %config end
 
