--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -1,13 +1,16 @@
 
 %config CONFIG_MUTEK_CONSOLE
+desc Enable text console support
 depend CONFIG_DRIVER_TTY CONFIG_DRIVER_UART
 %config end
 
 %config CONFIG_MUTEK_TIMERMS
+desc Provide a general purpose milliseconds timer object
 depend CONFIG_DRIVER_TIMER
 %config end
 
 %config CONFIG_MUTEK_LOGO
+desc Add builtin MutekH logo bitmap to the kernel
 depend CONFIG_DRIVER_FB
 %config end
 
