--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_NETWORK
 desc Enable network support
-default defined
+default undefined
 depend CONFIG_MUTEK_TIMERMS
 %config end
 
