ca commit on se couche

--- a/drivers/drivers.config
+++ b/drivers/drivers.config
@@ -1,31 +1,31 @@
 
 %config CONFIG_DRIVER_TTY
 flags nodefine
-desc At least one tty device driver must be enable to have it defined
+desc At least one tty device driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_UART
 flags nodefine
-desc At least one uart device driver must be enable to have it defined
+desc At least one uart device driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_NET
 flags nodefine
-desc At least one network device driver must be enable to have it defined
+desc At least one network device driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_TIMER
 flags nodefine
-desc At least one timer device driver must be enable to have it defined
+desc At least one timer device driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_ICU
 flags nodefine
-desc At least one interrupt control device driver must be enable to have it defined
+desc At least one interrupt control device driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_FB
 flags nodefine
-desc At least one frame buffer device driver must be enable to have it defined
+desc At least one frame buffer device driver must be enabled to have it defined
 %config end
 
