assert config flag added

--- a/global.config
+++ b/global.config
@@ -9,5 +9,6 @@ desc Enable debug features globaly
 provide CONFIG_HEXO_MEMALLOC_SIGNED
 provide CONFIG_HEXO_MEMALLOC_DEBUG
 provide CONFIG_PTHREAD_CHECK
+provide CONFIG_LIBC_ASSERT
 %config end
 
