--- a/libnetwork/libsocket/Makefile
+++ b/libnetwork/libsocket/Makefile
@@ -1,1 +1,15 @@
-objs += socket.o
+ifeq ($(CONFIG_NETWORK_SOCKET), defined)
+ objs += socket.o
+endif
+
+ifeq ($(CONFIG_NETWORK_UDP), defined)
+  objs += socket_udp.o
+endif
+
+ifeq ($(CONFIG_NETWORK_TCP), defined)
+  objs += socket_tcp.o
+endif
+
+ifeq ($(CONFIG_NETWORK_SOCKET_RAW), defined)
+  objs += socket_raw.o
+endif
