--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -33,35 +33,46 @@ default undefined
 %config CONFIG_NETWORK_RARP
 desc Enable RARP builtin client for address attribution
 default undefined
-require CONFIG_NETWORK_IPV4
+depend CONFIG_NETWORK_IPV4
 %config end
 
 %config CONFIG_NETWORK_UDP
 desc Enable UDP transport support
-default defined
-require CONFIG_NETWORK_IPV4
+default undefined
+depend CONFIG_NETWORK_IPV4
 %config end
 
 %config CONFIG_NETWORK_TCP
 desc Enable TCP transport support
-default defined
-require CONFIG_NETWORK_IPV4
+default undefined
+depend CONFIG_NETWORK_IPV4
 %config end
 
 %config CONFIG_NETWORK_NFS
 desc Enable NFS builtin client for network filesystem
 default undefined
-require CONFIG_NETWORK_UDP
+depend CONFIG_NETWORK_UDP
 %config end
 
 %config CONFIG_NETWORK_SOCKET
 desc Enable libsocket API support
-default defined
-require CONFIG_NETWORK_UDP CONFIG_NETWORK_TCP
+default undefined
+require	CONFIG_NETWORK_SOCKET_HEXO CONFIG_NETWORK_SOCKET_POSIX
 %config end
 
-%config CONFIG_NETWORK_SOCKET_ADVANCED
-desc Enable libsocket API support for advanced functions
-default defined
-require CONFIG_NETWORK_SOCKET
+%config CONFIG_NETWORK_SOCKET_HEXO
+desc Use HEXO socket interface (without integer file descriptors)
+default undefined
+exclude CONFIG_NETWORK_SOCKET_POSIX
+%config end
+
+%config CONFIG_NETWORK_SOCKET_POSIX
+desc Use POSIX socket interface (with integer file descriptors)
+default undefined
+exclude CONFIG_NETWORK_SOCKET_HEXO
+%config end
+
+%config CONFIG_NETWORK_SOCKET_RAW
+desc Enable support for raw sockets (PF_PACKET and SOCK_RAW)
+default undefined
 %config end
