bossage dans le train

--- a/arch/arch.config
+++ b/arch/arch.config
@@ -35,7 +35,7 @@ provide	CONFIG_ARCH_NAME=soclib
 %config CONFIG_ARCH_META
 desc	meta configuration token used to impose requirements
 default defined
-flags	mandatory noexport
+flags	mandatory noexport nodefine
 require	CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB
 %config end
 
@@ -43,6 +43,6 @@ require	CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB
 
 %config CONFIG_ARCH_NAME
 desc	makefile variable configuration token
-flags	noheader
+flags	noheader nodefine
 %config end
 
