--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -47,3 +47,7 @@ ifeq ($(CONFIG_DRIVER_TIMER_SOCLIB), defined)
  subdirs += timer-soclib
 endif
 
+ifeq ($(CONFIG_DRIVER_INPUT_8042), defined)
+ subdirs += input-8042
+endif
+
