--- a/drivers/drivers.config
+++ b/drivers/drivers.config
@@ -29,3 +29,8 @@ flags nodefine
 desc At least one frame buffer device driver must be enabled to have it defined
 %config end
 
+%config CONFIG_DRIVER_KEYBOARD
+flags nodefine
+desc At least one input keyborad driver must be enabled to have it defined
+%config end
+
