--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -73,7 +73,7 @@ default undefined
 %config CONFIG_CPU_META
 desc	meta configuration token used to impose requirements
 default defined
-flags	mandatory noexport
+flags	mandatory noexport nodefine
 require	CONFIG_CPU_X86 CONFIG_CPU_MIPS
 %config end
 
@@ -81,6 +81,6 @@ require	CONFIG_CPU_X86 CONFIG_CPU_MIPS
 
 %config CONFIG_CPU_NAME
 desc	makefile variable configuration token
-flags	noheader
+flags	noheader nodefine
 %config end
 
