--- a/drivers/tty-vga/tty-vga.config
+++ b/drivers/tty-vga/tty-vga.config
@@ -5,6 +5,7 @@ default undefined
 depend CONFIG_ARCH_IBMPC
 depend CONFIG_DRIVER_ICU
 provide CONFIG_DRIVER_TTY
+exclude CONFIG_DRIVER_FB_VGA CONFIG_DRIVER_INPUT_8042
 %config end
 
 %config CONFIG_DRIVER_CHAR_VGATTY_ANSI
