--- a/global.config
+++ b/global.config
@@ -1,7 +1,12 @@
 
-%config CONFIG_CODE_PIC
+%config CONFIG_COMPILE_PIC
 desc Generate position independant code
 default defined
+%config end
+
+%config CONFIG_COMPILE_COLLECT
+desc Enable symbols garbage collection to reduce binary size
+default undefined
 %config end
 
 %config CONFIG_DEBUG
