added arch-emu for linux emulation

--- a/arch/arch.config
+++ b/arch/arch.config
@@ -15,8 +15,8 @@ require CONFIG_SMP
 
 %config CONFIG_ARCH_IBMPC
 desc IBM PC platform support
-default	defined
-exclude CONFIG_ARCH_SOCLIB
+default	undefined
+exclude CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU
 provide	CONFIG_ARCH_NAME=ibmpc
 %config end
 
@@ -26,8 +26,18 @@ provide	CONFIG_ARCH_NAME=ibmpc
 %config CONFIG_ARCH_SOCLIB
 desc SocLib platform support
 default	undefined
-exclude	CONFIG_ARCH_IBMPC
+exclude	CONFIG_ARCH_IBMPC CONFIG_ARCH_EMU
 provide	CONFIG_ARCH_NAME=soclib
+%config end
+
+######################################################################
+#	Linux Emulation platform support
+
+%config CONFIG_ARCH_EMU
+desc Linux Emulation platform support
+default	undefined
+exclude CONFIG_ARCH_SOCLIB CONFIG_ARCH_IBMPC
+provide	CONFIG_ARCH_NAME=emu
 %config end
 
 ######################################################################
@@ -36,7 +46,7 @@ provide	CONFIG_ARCH_NAME=soclib
 desc	meta configuration token used to impose requirements
 default defined
 flags	mandatory noexport nodefine
-require	CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB
+require	CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU
 %config end
 
 # Makefile variable
