--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -5,7 +5,7 @@ default undefined
 %config end
 
 %config CONFIG_CPU_CACHE_COHERENCY
-desc Processors supports cache coherency mechanism 
+desc Processors supports cache coherency mechanism
 require CONFIG_CPU_CACHE
 default undefined
 %config end
@@ -17,7 +17,7 @@ default undefined
 %config CONFIG_CPU_X86
 desc x86 processors support
 default defined
-require	CONFIG_ARCH_IBMPC
+require	CONFIG_ARCH_IBMPC CONFIG_ARCH_EMU
 exclude CONFIG_CPU_MIPS
 provide CONFIG_CPU_NAME=x86
 provide CONFIG_CPU_CACHE
