RARP client implemented using PF_PACKET

--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -34,6 +34,7 @@ default undefined
 desc Enable RARP builtin client for address attribution
 default undefined
 depend CONFIG_NETWORK_IPV4
+depend CONFIG_NETWORK_SOCKET_RAW
 %config end
 
 %config CONFIG_NETWORK_UDP
