--- a/arch/arch.config
+++ b/arch/arch.config
@@ -38,6 +38,7 @@ desc Linux Emulation platform support
 default	undefined
 exclude CONFIG_ARCH_SOCLIB CONFIG_ARCH_IBMPC
 provide	CONFIG_ARCH_NAME=emu
+require CONFIG_ARCH_EMU_MEMORY
 %config end
 
 ######################################################################
