--- a/drivers/net-tuntap/net-tuntap.config
+++ b/drivers/net-tuntap/net-tuntap.config
@@ -2,5 +2,6 @@
 desc Enable TUN/TAP network device support
 default undefined
 depend CONFIG_NETWORK
+depend CONFIG_ARCH_EMU
 provide CONFIG_DRIVER_NET
 %config end
