--- a/libnetwork/libsocket/Makefile
+++ b/libnetwork/libsocket/Makefile
@@ -1,6 +1,4 @@
-ifeq ($(CONFIG_NETWORK_SOCKET), defined)
- objs += socket.o
-endif
+objs += socket.o
 
 ifeq ($(CONFIG_NETWORK_UDP), defined)
   objs += socket_udp.o
@@ -8,6 +6,10 @@ endif
 
 ifeq ($(CONFIG_NETWORK_TCP), defined)
   objs += socket_tcp.o
+endif
+
+ifeq ($(CONFIG_NETWORK_SOCKET_PACKET), defined)
+  objs += socket_packet.o
 endif
 
 ifeq ($(CONFIG_NETWORK_SOCKET_RAW), defined)
