--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -16,18 +16,17 @@ default undefined
 
 %config CONFIG_CPU_X86
 desc x86 processors support
-default defined
-require	CONFIG_ARCH_IBMPC CONFIG_ARCH_EMU
-exclude CONFIG_CPU_MIPS
+default undefined
+require	CONFIG_ARCH_IBMPC
+exclude CONFIG_CPU_MIPS CONFIG_CPU_EMU
 provide CONFIG_CPU_NAME=x86
-provide CONFIG_CPU_CACHE
-provide CONFIG_CPU_CACHE_COHERENCY
+provide CONFIG_CPU_CACHE CONFIG_CPU_CACHE_COHERENCY
+provide CONFIG_LIBC_STRING_ASM
 %config end
 
 
 ######################################################################
 #	Mips processors support
-
 
 %config CONFIG_CPU_MIPS
 desc MIPS processors support
@@ -35,7 +34,7 @@ default undefined
 require	CONFIG_ARCH_SOCLIB
 require CONFIG_CPU_MIPS_ABI_O32 CONFIG_CPU_MIPS_ABI_O64 CONFIG_CPU_MIPS_ABI_N32 CONFIG_CPU_MIPS_ABI_EABI
 require CONFIG_CPU_MIPS_VERSION
-exclude CONFIG_CPU_X86
+exclude CONFIG_CPU_X86 CONFIG_CPU_EMU
 provide CONFIG_CPU_NAME=mips
 %config end
 
@@ -69,12 +68,24 @@ default undefined
 %config end
 
 ######################################################################
+#	Linux Emulation processor support
+
+%config CONFIG_CPU_EMU
+desc Linux Emulation processor support
+default undefined
+require	CONFIG_ARCH_EMU
+exclude CONFIG_CPU_MIPS CONFIG_CPU_X86
+provide CONFIG_CPU_NAME=emu
+provide CONFIG_CPU_CACHE CONFIG_CPU_CACHE_COHERENCY
+%config end
+
+######################################################################
 
 %config CONFIG_CPU_META
 desc	meta configuration token used to impose requirements
 default defined
 flags	mandatory noexport nodefine
-require	CONFIG_CPU_X86 CONFIG_CPU_MIPS
+require	CONFIG_CPU_X86 CONFIG_CPU_MIPS CONFIG_CPU_EMU
 %config end
 
 # Makefile variable
