--- a/global.config
+++ b/global.config
@@ -9,6 +9,14 @@ desc Enable symbols garbage collection to reduce binary size
 default undefined
 %config end
 
+%config CONFIG_COMPILE_DEBUG
+desc Disable compiler optimization and add debug symbols
+%config end
+
+%config CONFIG_COMPILE_INSTRUMENT
+desc Add instrumentation calls for entry and exit to functions
+%config end
+
 %config CONFIG_DEBUG
 desc Enable debug features globaly
 provide CONFIG_HEXO_MEMALLOC_SIGNED
