--- a/hexo/Makefile
+++ b/hexo/Makefile
@@ -5,3 +5,8 @@ scheduler.o										\
 mem_alloc.o										\
 device.o
 
+ifeq ($(CONFIG_COMPILE_INSTRUMENT), defined)
+objs += instrument.o
+endif
+
+
