fallback and single def constraint added to config.pl

--- a/arch/arch.config
+++ b/arch/arch.config
@@ -11,43 +11,13 @@ require CONFIG_SMP
 %config end
 
 ######################################################################
-#	IBM PC platform support
-
-%config CONFIG_ARCH_IBMPC
-desc IBM PC platform support
-default	undefined
-exclude CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU
-provide	CONFIG_ARCH_NAME=ibmpc
-%config end
-
-######################################################################
-#	SocLib platform support
-
-%config CONFIG_ARCH_SOCLIB
-desc SocLib platform support
-default	undefined
-exclude	CONFIG_ARCH_IBMPC CONFIG_ARCH_EMU
-provide	CONFIG_ARCH_NAME=soclib
-%config end
-
-######################################################################
-#	Linux Emulation platform support
-
-%config CONFIG_ARCH_EMU
-desc Linux Emulation platform support
-default	undefined
-exclude CONFIG_ARCH_SOCLIB CONFIG_ARCH_IBMPC
-provide	CONFIG_ARCH_NAME=emu
-require CONFIG_ARCH_EMU_MEMORY CONFIG_CPU_EMU
-%config end
-
-######################################################################
 
 %config CONFIG_ARCH_META
 desc	meta configuration token used to impose requirements
 default defined
 flags	mandatory noexport nodefine
 require	CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU
+single	CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU
 %config end
 
 # Makefile variable
