--- a/arch/arch.config
+++ b/arch/arch.config
@@ -7,7 +7,7 @@ default undefined
 %config CONFIG_CLUSTER
 desc Support multi-clusters systems
 default undefined
-require CONFIG_SMP
+depend CONFIG_SMP
 %config end
 
 ######################################################################
