--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -3,7 +3,8 @@
 desc Linux Emulation platform support
 default	undefined
 provide	CONFIG_ARCH_NAME=emu
-require CONFIG_ARCH_EMU_MEMORY CONFIG_CPU_EMU
+require CONFIG_ARCH_EMU_MEMORY
+require CONFIG_CPU_EMU
 exclude CONFIG_SMP CONFIG_CLUSTER
 %config end
 
