--- a/arch/arch.config
+++ b/arch/arch.config
@@ -16,14 +16,14 @@ depend CONFIG_SMP
 desc	meta configuration token used to impose requirements
 default defined
 flags	mandatory noexport nodefine
-require	CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU
+require	CONFIG_ARCH_NAME
 single	CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU
 %config end
 
 # Makefile variable
 
 %config CONFIG_ARCH_NAME
-desc	makefile variable configuration token
-flags	noheader nodefine
+desc	Platform name configuration token
+flags	nodefine
 %config end
 
