--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -16,14 +16,14 @@ default undefined
 desc	meta configuration token used to impose requirements
 default defined
 flags	mandatory noexport nodefine
-require	CONFIG_CPU_X86 CONFIG_CPU_MIPS CONFIG_CPU_EMU
-single	CONFIG_CPU_X86 CONFIG_CPU_MIPS CONFIG_CPU_EMU
+require	CONFIG_CPU_NAME
+single	CONFIG_CPU_X86 CONFIG_CPU_X86_EMU CONFIG_CPU_MIPS
 %config end
 
 # Makefile variable
 
 %config CONFIG_CPU_NAME
-desc	makefile variable configuration token
-flags	noheader nodefine
+desc	Processor type name configuration token
+flags	nodefine
 %config end
 
