--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -5,7 +5,8 @@ require CONFIG_PTHREAD_STACK_SIZE
 %config end
 
 %config CONFIG_PTHREAD_STACK_SIZE
-desc Size of the stack allocated for new pthread in number of elements
+desc Size of the stack allocated for each pthread. Stack size is
+desc specified in stack words count.
 default 65535
 %config end
 
