--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -4,7 +4,7 @@ desc Linux Emulation platform support
 default	undefined
 provide	CONFIG_ARCH_NAME=emu
 require CONFIG_ARCH_EMU_MEMORY
-require CONFIG_CPU_X86_EMU
+require CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU
 exclude CONFIG_SMP CONFIG_CLUSTER
 %config end
 
