--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -17,7 +17,7 @@ desc	meta configuration token used to impose requirements
 default defined
 flags	mandatory noexport nodefine
 require	CONFIG_CPU_NAME
-single	CONFIG_CPU_X86 CONFIG_CPU_X86_EMU CONFIG_CPU_MIPS
+single	CONFIG_CPU_X86 CONFIG_CPU_X86_EMU  CONFIG_CPU_X86_64_EMU CONFIG_CPU_MIPS
 %config end
 
 # Makefile variable
