--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -20,8 +20,8 @@ desc Enable IP version 4 support
 default defined
 %config end
 
-%config CONFIG_NETWORK_ROUTING
-desc Enable packet routing support
+%config CONFIG_NETWORK_FORWARDING
+desc Enable packet forwarding support
 default undefined
 %config end
 
