updated build system

--- a/cpu/mips/Makefile
+++ b/cpu/mips/Makefile
@@ -1,7 +1,9 @@
 
 objs = 											\
-interrupts.o									\
+interrupts.o										\
 boot.o											\
 cpu_init.o										\
 cpu_context.o
+
+clean:
 
