frame pointer handling in context save/restore

--- a/global.config
+++ b/global.config
@@ -11,6 +11,11 @@ default undefined
 
 %config CONFIG_COMPILE_DEBUG
 desc Disable compiler optimization and add debug symbols
+provide CONFIG_COMPILE_FRAMEPTR
+%config end
+
+%config CONFIG_COMPILE_FRAMEPTR
+desc Compile with frame pointer regsiter
 %config end
 
 %config CONFIG_COMPILE_INSTRUMENT
