configuration script upgraded (parent cmd added), hexo scheduler can be disabled, memory allocation algorithm can be disabled, various configuration depencies fix

--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -11,25 +11,30 @@ provide CONFIG_CPU_NAME=mips
 
 %config CONFIG_CPU_MIPS_VERSION
 desc Mips processor version (1, 2, 3, 4, 32, 322, 64)
+parent CONFIG_CPU_MIPS
 default 1
 %config end
 
 %config CONFIG_CPU_MIPS_ABI_O32
 desc Mips processor abi is Old 32
+parent CONFIG_CPU_MIPS
 default defined
 %config end
 
 %config CONFIG_CPU_MIPS_ABI_O64
 desc Mips processor abi is Old 64
+parent CONFIG_CPU_MIPS
 default undefined
 %config end
 
 %config CONFIG_CPU_MIPS_ABI_N32
 desc Mips processor abi is New 32
+parent CONFIG_CPU_MIPS
 default undefined
 %config end
 
 %config CONFIG_CPU_MIPS_ABI_EABI
 desc Mips processor abi is Ext ABI
+parent CONFIG_CPU_MIPS
 default undefined
 %config end
