--- a/hexo/Makefile
+++ b/hexo/Makefile
@@ -1,12 +1,15 @@
 
 objs =											\
 context.o										\
-scheduler.o										\
 mem_alloc.o										\
 device.o
 
 ifeq ($(CONFIG_COMPILE_INSTRUMENT), defined)
 objs += instrument.o
+endif
+
+ifeq ($(CONFIG_HEXO_SCHED), defined)
+objs += scheduler.o
 endif
 
 clean:
