--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -2,31 +2,37 @@
 %config CONFIG_PTHREAD
 desc Enable POSIX thread support
 require CONFIG_PTHREAD_STACK_SIZE
+depend CONFIG_HEXO_SCHED
 %config end
 
 %config CONFIG_PTHREAD_STACK_SIZE
 desc Size of the stack allocated for each pthread. Stack size is
 desc specified in stack words count.
+parent CONFIG_PTHREAD
 default 65535
 %config end
 
 %config CONFIG_PTHREAD_CHECK
 desc Enable extensive error checking for pthread API
+parent CONFIG_PTHREAD
 default undefined
 %config end
 
 %config CONFIG_PTHREAD_CANCEL
 desc Provide pthread_cancel support
+parent CONFIG_PTHREAD
 default defined
 %config end
 
 %config CONFIG_PTHREAD_JOIN
 desc Provide joinable pthread support
+parent CONFIG_PTHREAD
 default defined
 %config end
 
 %config CONFIG_PTHREAD_MUTEX_ATTR
 desc Provide pthread mutex attributes support
+parent CONFIG_PTHREAD
 default defined
 %config end
 
