--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -1,43 +1,44 @@
 
 %config CONFIG_NETWORK
 desc Enable network support
-default undefined
 depend CONFIG_MUTEK_TIMERMS
 %config end
 
 %config CONFIG_NETWORK_AUTOALIGN
 desc Force packet buffer alignment
-default undefined
+parent CONFIG_NETWORK
 %config end
 
 %config CONFIG_NETWORK_PROFILING
 desc Provide profiling information about network layer
-default undefined
+parent CONFIG_NETWORK
 %config end
 
 %config CONFIG_NETWORK_IPV4
 desc Enable IP version 4 support
+parent CONFIG_NETWORK
 default defined
 %config end
 
 %config CONFIG_NETWORK_FORWARDING
 desc Enable packet forwarding support
-default undefined
+parent CONFIG_NETWORK
 %config end
 
 %config CONFIG_NETWORK_FILTER
 desc Enable packet filtering support
-default undefined
+parent CONFIG_NETWORK
 %config end
 
 %config CONFIG_NETWORK_UDP
 desc Enable UDP transport support
-default undefined
+parent CONFIG_NETWORK
 depend CONFIG_NETWORK_IPV4
 %config end
 
 %config CONFIG_NETWORK_TCP
 desc Enable TCP transport support
-default undefined
+parent CONFIG_NETWORK
 depend CONFIG_NETWORK_IPV4
 %config end
+
