ptrace & clone added in x86-emu cpu

--- a/global.config
+++ b/global.config
@@ -15,7 +15,7 @@ provide CONFIG_COMPILE_FRAMEPTR
 %config end
 
 %config CONFIG_COMPILE_FRAMEPTR
-desc Compile with frame pointer regsiter
+desc Compile with frame pointer register
 %config end
 
 %config CONFIG_COMPILE_INSTRUMENT
