more & more NFS

--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -2,6 +2,8 @@
 %config CONFIG_NETWORK
 desc Enable network support
 depend CONFIG_MUTEK_TIMERMS
+depend CONFIG_LIBC_SEMAPHORE
+depend CONFIG_PTHREAD
 %config end
 
 %config CONFIG_NETWORK_AUTOALIGN
