simple mcu arch added

--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -10,6 +10,12 @@ require CONFIG_CPU_CACHE
 default undefined
 %config end
 
+%config CONFIG_CPU_RESET_ADDR
+desc Processor reset vector address
+default undefined
+flags nodefine
+%config end
+
 ######################################################################
 
 %config CONFIG_CPU_META
