--- a/cpu/avr/avr.config
+++ b/cpu/avr/avr.config
@@ -3,5 +3,6 @@
 desc AVR microcontroller support
 default undefined
 provide CONFIG_CPU_NAME=avr
+provide CONFIG_CPU_RESET_ADDR=0x00000000
 %config end
 
