--- a/libnetwork/rarp/rarp.config
+++ b/libnetwork/rarp/rarp.config
@@ -1,6 +1,7 @@
 %config CONFIG_NETWORK_RARP
 desc Enable RARP builtin client for address attribution
 default undefined
+parent CONFIG_NETWORK
 depend CONFIG_NETWORK_IPV4
 depend CONFIG_NETWORK_SOCKET_PACKET
 %config end
