more avr cpu and simple arch stuff added

--- a/global.config
+++ b/global.config
@@ -22,6 +22,11 @@ desc Compile with frame pointer register
 desc Add instrumentation calls for entry and exit to functions
 %config end
 
+%config CONFIG_COMPILE_SIZEOF_INT
+desc Size of int C type in bytes
+flags nodefine
+%config end
+
 %config CONFIG_DEBUG
 desc Enable debug features globaly
 provide CONFIG_HEXO_MEMALLOC_SIGNED
