--- a/cpu/avr/avr.config
+++ b/cpu/avr/avr.config
@@ -4,5 +4,6 @@ desc AVR microcontroller support
 default undefined
 provide CONFIG_CPU_NAME=avr
 provide CONFIG_CPU_RESET_ADDR=0x00000000
+provide CONFIG_COMPILE_SIZEOF_INT=2
 %config end
 
