license check added, more avr code added

--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -16,6 +16,14 @@ default undefined
 flags nodefine
 %config end
 
+%config CONFIG_CPU_ENDIAN_BIG
+desc Processor is big endian
+%config end
+
+%config CONFIG_CPU_ENDIAN_LITTLE
+desc Processor is little endian
+%config end
+
 ######################################################################
 
 %config CONFIG_CPU_META
@@ -23,6 +31,7 @@ desc	meta configuration token used to impose requirements
 default defined
 flags	mandatory noexport nodefine
 require	CONFIG_CPU_NAME
+require CONFIG_CPU_ENDIAN_BIG CONFIG_CPU_ENDIAN_LITTLE
 single	CONFIG_CPU_X86 CONFIG_CPU_X86_EMU  CONFIG_CPU_X86_64_EMU CONFIG_CPU_MIPS
 %config end
 
