--- a/global.config
+++ b/global.config
@@ -1,4 +1,9 @@
 
+%config CONFIG_COMPILE_SAVETEMPS
+desc Keep all intermediate files generated during compilation.
+desc Preprocesseced (.i) and assembler (.s) files may be usefull to solve compilation issues.
+%config end
+
 %config CONFIG_COMPILE_PIC
 desc Generate position independant code
 default defined
@@ -6,7 +11,6 @@ default defined
 
 %config CONFIG_COMPILE_COLLECT
 desc Enable symbols garbage collection to reduce binary size
-default undefined
 %config end
 
 %config CONFIG_COMPILE_DEBUG
