--- a/cpu/avr/avr.config
+++ b/cpu/avr/avr.config
@@ -5,5 +5,12 @@ default undefined
 provide CONFIG_CPU_NAME=avr
 provide CONFIG_CPU_RESET_ADDR=0x00000000
 provide CONFIG_COMPILE_SIZEOF_INT=2
+require CONFIG_CPU_AVR_IRQ_COUNT
+provide CONFIG_CPU_ENDIAN_LITTLE
+%config end
+
+%config CONFIG_CPU_AVR_IRQ_COUNT
+desc Set avr microcontroller interrupts table slot count
+default undefined
 %config end
 
