--- a/cpu/x86-64-emu/emu.config
+++ b/cpu/x86-64-emu/emu.config
@@ -5,5 +5,6 @@ default undefined
 require	CONFIG_ARCH_EMU
 provide CONFIG_CPU_NAME=x86-64-emu
 provide CONFIG_CPU_CACHE CONFIG_CPU_CACHE_COHERENCY
+provide CONFIG_CPU_ENDIAN_LITTLE
 %config end
 
