--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -31,8 +31,8 @@ desc	meta configuration token used to impose requirements
 default defined
 flags	mandatory noexport nodefine
 require	CONFIG_CPU_NAME
+single	CONFIG_CPU_X86 CONFIG_CPU_X86_EMU  CONFIG_CPU_X86_64_EMU CONFIG_CPU_MIPS CONFIG_CPU_AVR
 require CONFIG_CPU_ENDIAN_BIG CONFIG_CPU_ENDIAN_LITTLE
-single	CONFIG_CPU_X86 CONFIG_CPU_X86_EMU  CONFIG_CPU_X86_64_EMU CONFIG_CPU_MIPS
 %config end
 
 # Makefile variable
