--- a/scripts/global.config
+++ b/scripts/global.config
@@ -28,7 +28,7 @@ desc Add instrumentation calls for entry and exit to functions
 
 %config CONFIG_COMPILE_SIZEOF_INT
 desc Size of int C type in bytes
-flags nodefine
+flags nodefine mandatory
 %config end
 
 %config CONFIG_DEBUG
