--- a/scripts/license.config
+++ b/scripts/license.config
@@ -15,6 +15,7 @@ exclude CONFIG_LICENSE_USE_PROPRIETARY
 
 %config CONFIG_LICENSE_USE_LGPL
 desc This token will be defined if using LGPL licensed code in the kernel with current configuration
+default defined
 flags nodefine
 %config end
 
