--- a/cpu/avr/avr.config
+++ b/cpu/avr/avr.config
@@ -7,6 +7,7 @@ provide CONFIG_CPU_RESET_ADDR=0x00000000
 provide CONFIG_COMPILE_SIZEOF_INT=2
 require CONFIG_CPU_AVR_IRQ_COUNT
 provide CONFIG_CPU_ENDIAN_LITTLE
+provide CONFIG_LIBC_STRING_ASM
 %config end
 
 %config CONFIG_CPU_AVR_IRQ_COUNT
