--- a/cpu/x86-64-emu/emu.config
+++ b/cpu/x86-64-emu/emu.config
@@ -6,5 +6,6 @@ require	CONFIG_ARCH_EMU
 provide CONFIG_CPU_NAME=x86-64-emu
 provide CONFIG_CPU_CACHE CONFIG_CPU_CACHE_COHERENCY
 provide CONFIG_CPU_ENDIAN_LITTLE
+provide CONFIG_COMPILE_SIZEOF_INT=4
 %config end
 
