--- a/cpu/68hcs12/Makefile
+++ b/cpu/68hcs12/Makefile
@@ -1,5 +1,5 @@
 
-objs = boot.o cpu_init.o cpu_context.o interrupts.o libgcc.o
+objs = boot.o vector.o cpu_init.o cpu_context.o interrupts.o libgcc.o
 subdirs =
 
 clean:
