--- a/cpu/avr/avr.config
+++ b/cpu/avr/avr.config
@@ -6,12 +6,30 @@ provide CONFIG_CPU_NAME=avr
 provide CONFIG_CPU_RESET_ADDR=0x00000000
 provide CONFIG_COMPILE_SIZEOF_INT=2
 require CONFIG_CPU_AVR_IRQ_COUNT
+require CONFIG_CPU_AVR_GCCMCU
 provide CONFIG_CPU_ENDIAN_LITTLE
 provide CONFIG_LIBC_STRING_ASM
+suggest CONFIG_HEXO_MEMALLOC_ALIGN=1
 %config end
 
 %config CONFIG_CPU_AVR_IRQ_COUNT
 desc Set avr microcontroller interrupts table slot count
-default undefined
+parent CONFIG_CPU_AVR
+%config end
+
+%config CONFIG_CPU_AVR_GCCMCU
+desc Avr core instruction set version as defined in the gcc manual
+parent CONFIG_CPU_AVR
+%config end
+
+%config CONFIG_CPU_AVR_ATMEGA128
+desc Provide all configuration tokens suitable for the Atmega128 device.
+parent CONFIG_CPU_AVR
+provide CONFIG_ARCH_SIMPLE_RAM_ADDR=0x0100
+provide CONFIG_ARCH_SIMPLE_RAM_SIZE=0xf00
+provide CONFIG_ARCH_SIMPLE_ROM_ADDR=0x0000
+provide CONFIG_ARCH_SIMPLE_ROM_SIZE=0x20000
+provide CONFIG_CPU_AVR_IRQ_COUNT=28
+provide CONFIG_CPU_AVR_GCCMCU=atmega128
 %config end
 
