--- a/drivers/fb-vga/fb-vga.config
+++ b/drivers/fb-vga/fb-vga.config
@@ -4,5 +4,9 @@ desc enable vga frame buffer device support
 default undefined
 depend CONFIG_ARCH_IBMPC
 provide CONFIG_DRIVER_FB
+
+# based on code from svgalib
+provide CONFIG_LICENSE_USE_BSD
+
 %config end
 
