--- a/drivers/tty-vga/tty-vga.config
+++ b/drivers/tty-vga/tty-vga.config
@@ -1,15 +1,23 @@
 
 %config CONFIG_DRIVER_CHAR_VGATTY
-desc enable vga TTY device support
+desc Enable vga TTY device support
 default undefined
 depend CONFIG_ARCH_IBMPC
 depend CONFIG_DRIVER_ICU
 provide CONFIG_DRIVER_TTY
-exclude CONFIG_DRIVER_FB_VGA CONFIG_DRIVER_INPUT_8042
+exclude CONFIG_DRIVER_FB_VGA
 %config end
 
 %config CONFIG_DRIVER_CHAR_VGATTY_ANSI
-desc enable ansi codes support
+desc Enable ansi codes support
 default undefined
+parent CONFIG_DRIVER_CHAR_VGATTY
+%config end
+
+%config CONFIG_DRIVER_CHAR_VGATTY_KEYBOARD
+desc Enable keyboard support. TTY will be output only if this token is disabled.
+default defined
+exclude CONFIG_DRIVER_INPUT_8042
+parent CONFIG_DRIVER_CHAR_VGATTY
 %config end
 
