--- a/arch/ibmpc/ibmpc.config
+++ b/arch/ibmpc/ibmpc.config
@@ -5,3 +5,14 @@ default	undefined
 provide	CONFIG_ARCH_NAME=ibmpc
 %config end
 
+%config CONFIG_ARCH_IBMPC_MEMORY
+desc Set the amount of ram memory. Ram size will be autodetected if this token is diabled.
+parent CONFIG_ARCH_IBMPC
+%config end
+
+%config CONFIG_ARCH_IBMPC_MEMORY_SEGLIMIT
+desc Set the size of x86 cpu segments to ram memory size instead of 4Gbytes.
+parent CONFIG_ARCH_IBMPC
+require CONFIG_ARCH_IBMPC_MEMORY
+%config end
+
