--- a/drivers/drivers.config
+++ b/drivers/drivers.config
@@ -34,3 +34,8 @@ flags nodefine
 desc At least one input keyborad driver must be enabled to have it defined
 %config end
 
+%config CONFIG_DRIVER_SOUND
+flags nodefine
+desc At least one sound driver must be enabled to have it defined
+%config end
+
