--- a/arch/arch.config
+++ b/arch/arch.config
@@ -2,6 +2,7 @@
 %config CONFIG_SMP
 desc Support multi-processors systems
 default undefined
+suggest CONFIG_CPU_MAXCOUNT>1
 %config end
 
 %config CONFIG_CLUSTER
