--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -1,4 +1,10 @@
 
+%config CONFIG_CPU_MAXCOUNT
+desc Maximum CPU count
+default 1
+flags mandatory
+%config end
+
 %config CONFIG_CPU_CACHE
 desc Processors uses cache
 default undefined
