lua library and setjmp feature added

--- a/cpu/avr/avr.config
+++ b/cpu/avr/avr.config
@@ -10,6 +10,8 @@ require CONFIG_CPU_AVR_GCCMCU
 provide CONFIG_CPU_ENDIAN_LITTLE
 provide CONFIG_LIBC_STRING_ASM
 suggest CONFIG_HEXO_MEMALLOC_ALIGN=1
+# 32 general purpose registers + pc
+provide CONFIG_LIBC_SETJMP_REG_COUNT=33
 %config end
 
 %config CONFIG_CPU_AVR_IRQ_COUNT
