--- a/cpu/x86-64-emu/emu.config
+++ b/cpu/x86-64-emu/emu.config
@@ -7,5 +7,7 @@ provide CONFIG_CPU_NAME=x86-64-emu
 provide CONFIG_CPU_CACHE CONFIG_CPU_CACHE_COHERENCY
 provide CONFIG_CPU_ENDIAN_LITTLE
 provide CONFIG_COMPILE_SIZEOF_INT=4
+# 16 general purpose registers + eip
+provide CONFIG_LIBC_SETJMP_REG_COUNT=17
 %config end
 
