--- a/scripts/license.config
+++ b/scripts/license.config
@@ -24,6 +24,11 @@ desc This token will be defined if using BSD licensed code in the kernel with cu
 flags nodefine
 %config end
 
+%config CONFIG_LICENSE_USE_MIT
+desc This token will be defined if using MIT licensed code in the kernel with current configuration
+flags nodefine
+%config end
+
 %config CONFIG_LICENSE_USE_PUBLIC
 desc This token will be defined if using Public domain code in the kernel with current configuration
 flags nodefine
@@ -46,6 +51,11 @@ exclude CONFIG_LICENSE_USE_GPL
 
 %config CONFIG_LICENSE_APP_BSD
 desc This token must be defined if application is BSD licensed
+exclude CONFIG_LICENSE_USE_GPL
+%config end
+
+%config CONFIG_LICENSE_APP_MIT
+desc This token must be defined if application is MIT licensed
 exclude CONFIG_LICENSE_USE_GPL
 %config end
 
