--- a/hexo/Makefile
+++ b/hexo/Makefile
@@ -4,6 +4,10 @@ context.o										\
 mem_alloc.o										\
 device.o
 
+ifeq ($(CONFIG_HEXO_VMEM), defined)
+objs += vmem_paddr.o
+endif
+
 ifeq ($(CONFIG_COMPILE_INSTRUMENT), defined)
 objs += instrument.o
 endif
