--- a/drivers/block-ata/block-ata.config
+++ b/drivers/block-ata/block-ata.config
@@ -4,5 +4,7 @@ desc enable ATA block device support
 default undefined
 depend CONFIG_ARCH_IBMPC
 depend CONFIG_DRIVER_ICU
+depend CONFIG_DRIVER_TIMER
 %config end
+
 
