--- a/scripts/global.config
+++ b/scripts/global.config
@@ -37,5 +37,6 @@ provide CONFIG_HEXO_MEMALLOC_SIGNED
 provide CONFIG_HEXO_MEMALLOC_DEBUG
 provide CONFIG_PTHREAD_CHECK
 provide CONFIG_LIBC_ASSERT
+provide CONFIG_DEBUG_SPINLOCK_LIMIT=32000000
 %config end
 
