x86 alignement checking configuration option added

--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -13,3 +13,9 @@ provide CONFIG_COMPILE_SIZEOF_INT=4
 provide CONFIG_LIBC_SETJMP_REG_COUNT=9
 %config end
 
+%config CONFIG_CPU_X86_ALIGNCHECK
+parent CONFIG_CPU_X86
+desc Enable memory access alignement checking on x86 processors
+default defined
+%config end
+
