ramdisk size configuration params added

--- a/drivers/block-ramdisk/block-ramdisk.config
+++ b/drivers/block-ramdisk/block-ramdisk.config
@@ -1,4 +1,19 @@
 
 %config CONFIG_DRIVER_BLOCK_RAMDISK
 desc enable ramdisk block device support
+require CONFIG_DRIVER_BLOCK_RAMDISK_SIZE
+require CONFIG_DRIVER_BLOCK_RAMDISK_BLOCKSIZE
 %config end
+
+%config CONFIG_DRIVER_BLOCK_RAMDISK_SIZE
+parent CONFIG_DRIVER_BLOCK_RAMDISK
+desc ram block device size in blocks
+default 2048
+%config end
+
+%config CONFIG_DRIVER_BLOCK_RAMDISK_BLOCKSIZE
+parent CONFIG_DRIVER_BLOCK_RAMDISK
+desc ram block device block size in bytes
+default 512
+%config end
+
