--- a/cpu/x86/Makefile
+++ b/cpu/x86/Makefile
@@ -5,6 +5,9 @@ boot.o											\
 cpu_init.o										\
 cpu_context.o
 
-subdirs = libc libnetwork
+ifeq ($(CONFIG_HEXO_VMEM), defined)
+objs += vmem.o
+endif
 
+subdirs = libc libnetwork
 
